# rustro

./: .gitignore  100_PERCENT_COMPLETE.md  AUTOMATIC_TOKEN_EXTRACTION.md  BUILD.md  COMPLETE_FEATURE_SUMMARY.md  CREDENTIALS_SETUP.md  Cargo.toml  FNO_STOCKS_GUIDE.md  GET_TOTP_SECRET.md  IMPLEMENTATION_COMPLETE.md  IMPLEMENTATION_SUMMARY.md  MANUAL_TOTP_SETUP.md  MPIN_SETUP.md  MULTI_ASSET_QUICK_START.md  OFF_HOURS_TASKS_STATUS.md  OPTION_TRADING_BOT_EVENT_DRIVEN.md  OPTION_TRADING_BOT_EVENT_SPEC.md  OPTION_TRADING_BOT_FLOW.md  OPTION_TRADING_BOT_FLOW_COMPREHENSIVE.md  OPTION_TRADING_BOT_FLOW_CORRECTED.md  OPTION_TRADING_BOT_FLOW_DETAILED.md  OPTION_TRADING_BOT_FLOW_ENHANCED.md  OPTION_TRADING_BOT_FLOW_FINAL.md  OPTION_TRADING_BOT_FLOW_OPTIMIZED.md  OPTION_TRADING_BOT_STRUCTURED.md  OPTION_TRADING_BOT_STRUCTURED_SUPPLEMENT.md  PROJECT_STATUS.md  QUICKSTART.md  QUICK_REFERENCE.md  README.md  RUN.md  RUST_INSTALL_AND_RUN.md  STRATEGY_ATM_MOMENTUM_INTRADAY.md  STRATEGY_DYNAMIC_TARGETS_STEP_BY_STEP.md  STRATEGY_PROD_ADX_VWAP_ATM_GAPSAFE.md  STRATEGY_RUST_DYNAMIC_TARGETS.md  TOKEN_FILTER_SUMMARY.md  USAGE.md  config.toml  run.bat
src/: error.rs  lib.rs  main.rs  types.rs
src/analytics/: mod.rs  performance.rs
src/broker/: angel_one.rs  instrument_cache.rs  mod.rs  paper_trading.rs  token_extractor.rs  tokens.rs  websocket.rs
src/config/: loader.rs  mod.rs
src/data/: bar_aggregator.rs  bar_store.rs  historical_sync.rs  historical_sync_multi.rs  hourly_tokens.rs  mod.rs  tick_buffer.rs
src/events/: event_bus.rs  mod.rs  types.rs
src/orders/: manager.rs  mod.rs  (+1 more)
(+18 files in other folders)
