[package]
name = "rustro"
version = "0.1.0"
edition = "2021"

[dependencies]
# Async runtime
tokio = { version = "1.41", features = ["full"] }
tokio-tungstenite = { version = "0.24", features = ["native-tls"] }

# HTTP client
reqwest = { version = "0.12", features = ["json", "rustls-tls"] }

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Time & Date
chrono = { version = "0.4", features = ["serde"] }
chrono-tz = "0.10"

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }

# Error handling
thiserror = "2.0"
anyhow = "1.0"

# Configuration
config = "0.14"
toml = "0.8"

# Hashing (for idempotency keys)
sha2 = "0.10"
hmac = "0.12"
sha1 = "0.10"
base32 = "0.4"

# CSV parsing (for instrument master)
csv = "1.3"

# UUID generation
uuid = { version = "1.11", features = ["v4", "serde"] }

# File compression
flate2 = "1.0"

# Native TLS
native-tls = "0.2"

# Futures utilities
futures-util = "0.3"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
strip = true

